Bug 85992 - [chromium] MediaStream API: Fixing a memory leak in WebUserMediaRequest
Summary: [chromium] MediaStream API: Fixing a memory leak in WebUserMediaRequest
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit API (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Tommy Widenflycht
URL:
Keywords:
Depends on:
Blocks: 56459
  Show dependency treegraph
 
Reported: 2012-05-09 07:25 PDT by Tommy Widenflycht
Modified: 2012-05-09 08:44 PDT (History)
3 users (show)

See Also:


Attachments
Patch (1.41 KB, patch)
2012-05-09 07:27 PDT, Tommy Widenflycht
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tommy Widenflycht 2012-05-09 07:25:35 PDT
I missed one class when I cleaned up the WebRTC classes last time :/
Comment 1 Tommy Widenflycht 2012-05-09 07:27:32 PDT
Created attachment 140941 [details]
Patch
Comment 2 WebKit Review Bot 2012-05-09 08:44:21 PDT
Comment on attachment 140941 [details]
Patch

Clearing flags on attachment: 140941

Committed r116528: <http://trac.webkit.org/changeset/116528>
Comment 3 WebKit Review Bot 2012-05-09 08:44:28 PDT
All reviewed patches have been landed.  Closing bug.