[chromium] MediaStream API: Fixing a memory leak in WebUserMediaRequest https://bugs.webkit.org/show_bug.cgi?id=85992

Reviewed by Adam Barth.

* src/WebUserMediaRequest.cpp:
(WebKit::WebUserMediaRequest::assign):


Canonical link: https://commits.webkit.org/103577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116528 268f45cc-cd09-0410-ab3c-d52691b4dbfc